fixed some comments for less files to be invisible

--- a/app/views/styles/_main.less
+++ b/app/views/styles/_main.less
@@ -1,8 +1,8 @@
-/* ===========================================================================
- This file gets included by default before other less files because it
- includes all the setup and mixins used everywhere else
- =============================================================================
-*/
+// =============================================================================
+// This file gets included by default before other less files because it
+// includes all the setup and mixins used everywhere else
+// =============================================================================
+
 @import 'vendor/styles/clearless/all';
 
 @total-columns: 16;
